# 2dt304-project-embedded-systems

./: LICENSE  README.md  bme680.py  boot.py  main.py
Server/: app.js  package-lock.json  package.json  subscribe.js  web.html
final embedded code/: CMakeLists.txt
final embedded code/bme680/: CMakeLists.txt
final embedded code/include/: lwipopts.h
final embedded code/src/: main.c
umqtt/: simple.py
